Show finished check, and fix vertical alignment

--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -133,6 +133,7 @@
 		flex-wrap: wrap;
 		> * {
 			flex: 0 0 calc(50% - 16px);
+			display: flex;
 			&:nth-child(odd) {
 				margin-right: 16px;
 			}
